# novel-kit

./: CLAUDE.md  CONTRIBUTING.md  README.md  build-config.json  pyproject.toml
.claude/: settings.local.json
commands/: chapter-confirm.md  chapter-plan.md  chapter-polish.md  chapter-review.md  chapter-write.md  character-list.md  character-new.md  character-show.md  character-update.md  constitution-check.md  constitution-create.md  constitution-show.md  constitution-update.md  faction-list.md  faction-members.md  faction-new.md  faction-relationships.md  faction-show.md  faction-update.md  location-list.md  location-map.md  location-new.md  location-show.md  location-update.md  novel-setup.md  plot-foreshadow-list.md  plot-foreshadow-new.md  plot-foreshadow-track.md  plot-main-list.md  plot-main-new.md  plot-main-show.md  plot-main-update.md  plot-side-list.md  plot-side-new.md  plot-side-show.md  plot-side-update.md  writer-list.md  writer-new.md  writer-show.md  writer-switch.md  (+1 more)
docs/: build.md  commands.md  todo.md
memory/: config.json
openspec/changes/transform-novelkit-to-paperkit/: SUMMARY.md  design.md  proposal.md  tasks.md
openspec/changes/transform-novelkit-to-paperkit/specs/paperkit-core/: spec.md
openspec/changes/transform-novelkit-to-paperkit/specs/paperkit-expand/: spec.md
openspec/changes/transform-novelkit-to-paperkit/specs/paperkit-polish/: spec.md
openspec/changes/transform-novelkit-to-paperkit/specs/paperkit-preview/: spec.md
src/novel_kit_cli/: __init__.py
(+3 files in other folders)
