[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novel-kit-cli"
version = "0.1.0"
description = "NovelKit CLI - AI-Assisted Novel Writing Toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "readchar>=3.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
novel-kit = "novel_kit_cli:main"

[tool.hatch.build.targets.wheel]
# 包目录使用下划线命名（Python 包名规范）
packages = ["src/novel_kit_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/commands",
    "/templates",
    "/scripts",
    "/memory",
    "/build.py",
    "/README.md",
]
